--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     }
   ],
   "require": {
-    "illuminate/support": "^5.4",
-    "illuminate/console": "^5.4"
+    "illuminate/support": "5.1 - 5.5",
+    "illuminate/console": "5.1 - 5.5"
   },
   "autoload": {
     "psr-4": {
