--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,21 @@
     "illuminate/support": "5.1 - 5.5",
     "illuminate/console": "5.1 - 5.5"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^6.2"
+  },
   "autoload": {
     "psr-4": {
       "Juddling\\PHPStorm\\": "src/"
     }
   },
-  "require-dev": {
-    "phpunit/phpunit": "^6.2"
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Juddling\\PHPStorm\\LaunchUrlServiceProvider"
+      ],
+      "aliases": {
+      }
+    }
   }
 }
