--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
     }
   ],
   "require": {
-    "illuminate/support": "5.1 - 5.5",
-    "illuminate/console": "5.1 - 5.5"
+    "illuminate/support": "5.1 - 5.7",
+    "illuminate/console": "5.1 - 5.7"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.2"
+    "phpunit/phpunit": "^6.2 | ^7.0"
   },
   "autoload": {
     "psr-4": {
